[package]
name = "pia-mikrotik"
version = "0.1.0"
edition = "2021"

[dependencies]
ipnetwork = "0.20.0"
mikrotik = "0.0.15"
ping = "0.4.0"
reqwest = { version=  "0.11.11", features=["json", "rustls-tls"]}
serde = { version = "1.0.143", features = ["derive"]}
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
urlencoding = "2.1.0"
